Fix spacing with bedroom inputs and added animation for filter

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -11,6 +11,10 @@
   > p {
     color: #5f5f5f;
   }
+
+  .header-text-black {
+    color: black;
+  }
 }
 
 .hr {
